--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
   <title>google_map_code_store</title>
   <link rel="manifest" href="manifest.json">
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUjNaRwWEUbn__efy3duv9cFQak66jI4o"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key="></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
